tests/baselines/reference/unicodeExtendedEscapesInStrings17_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings17_ES5.ts(2,12): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings17_ES5.ts(2,17): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings17_ES5.ts(2,22): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings17_ES5.ts (3 errors) ====
    
    var x = "\u{r}\u{n}\u{t}";
               
!!! error TS1125: Hexadecimal digit expected.
                    
!!! error TS1125: Hexadecimal digit expected.
                         
!!! error TS1125: Hexadecimal digit expected.
    